# 2dof-project

./: README.md
hardwarebot/: package.xml
hardwarebot/config/: trajectory_controller.yaml
hardwarebot/description/: robot.srdf  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
hardwarebot/hardware/: hardwarebot_system.cpp  hardwarebot_system.hpp  hardwarebot_system_plugin.xml
hardwarebot/launch/: bringup_real.launch.py  rsp.launch.py  sim.launch.py
hardwarebot/moveit/: kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml
print beds/gripper-rotation-end/: solobed.3mf
print beds/gripper-tilt-end/: bed1.3mf  bed2.3mf
print beds/jaw-mechanism/: rotationbed.3mf  tiltbed.3mf
print beds/rotation-mechanism/: bed1.3mf  bed2.3mf
print beds/tilt-mechanism/: bed1.3mf  bed2.3mf
